k8s/fake-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fake-api-service
  namespace: app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: fake-api
